--- a/DevTool/DevTool.csproj
+++ b/DevTool/DevTool.csproj
@@ -74,6 +74,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\FormCommon.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CustomControl\CustomPanel.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -147,10 +150,9 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Common\" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="Assets\Images\info_icon.png" />
     <None Include="Assets\Images\logo_icon.png" />
     <None Include="Assets\Images\help_icon.png" />
     <None Include="Assets\Images\minimize_icon.png" />
