--- a/DevTool/App.config
+++ b/DevTool/App.config
@@ -25,6 +25,9 @@
             <setting name="Translator" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ALONTOPShortcut" serializeAs="String">
+                <value>1&amp;1&amp;0&amp;123</value>
+            </setting>
         </DevTool.Properties.Settings>
     </userSettings>
 </configuration>
