--- a/DevTool/DevTool.csproj
+++ b/DevTool/DevTool.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\ClipboardHelper.cs" />
     <Compile Include="Common\FormCommon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,10 +84,13 @@
     <Compile Include="CustomControl\CustomPanel.Designer.cs">
       <DependentUpon>CustomPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\ClipboardData.cs" />
     <Compile Include="Model\Translator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\WindowActivity.cs" />
+    <Compile Include="Services\ClipboardAPI.cs" />
+    <Compile Include="Services\MemoryAPI.cs" />
+    <Compile Include="Services\WindowAPI.cs" />
     <Compile Include="Settings\FrmHome.cs">
       <SubType>UserControl</SubType>
     </Compile>
