--- a/DevTool/Properties/Settings.settings
+++ b/DevTool/Properties/Settings.settings
@@ -3,10 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="InputLang" Type="System.String" Scope="User">
-      <Value Profile="(Default)">auto</Value>
+      <Value Profile="(Default)">en</Value>
     </Setting>
     <Setting Name="OutputLang" Type="System.String" Scope="User">
-      <Value Profile="(Default)">en</Value>
+      <Value Profile="(Default)">vi</Value>
     </Setting>
     <Setting Name="AlwayOnTop" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
@@ -14,7 +14,7 @@
     <Setting Name="CopyClipBoard" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="Translator" Type="System.Boolean" Scope="User">
+    <Setting Name="TranslatorEnable" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="ALONTOPShortcut" Type="System.String" Scope="User">
