--- a/DevTool/Properties/Settings.settings
+++ b/DevTool/Properties/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="ALONTOPShortcut" Type="System.String" Scope="User">
       <Value Profile="(Default)">1&amp;1&amp;0&amp;123</Value>
     </Setting>
+    <Setting Name="RunAtStatupEnable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ALONTOEnable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
